Finalised website, fixed scrollbar, added contact area

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
             background-color: black;
             font-family: Roboto Mono;
             padding:25px 50px;
-            padding-bottom: 100px;
+            
             transition: background-image 0.5s ease-in-out;
         }
         body::before {
@@ -141,7 +141,7 @@
         background: rgb(70, 45, 2); 
         }       
         #task-container::-webkit-scrollbar-thumb {
-        background-color: rgb(147, 101, 21); 
+        background-color: rgb(116, 78, 14); 
         border-radius: 20px; 
         
         border: 1px solid rgba(241, 241, 241,0.3); 
@@ -423,6 +423,7 @@
         .box-container2{
             display:flex;
             justify-content: space-around;
+            margin-bottom: 200px;
         }
         
         .time-tracker{
@@ -563,7 +564,7 @@
         background: rgb(70, 45, 2); 
         }       
         body::-webkit-scrollbar-thumb {
-        background-color: rgb(147, 101, 21); 
+        background-color: rgb(116, 78, 14); 
         border-radius: 20px; 
         
         border: 1px solid rgba(241, 241, 241,0.3); 
@@ -572,6 +573,37 @@
         background-color: rgb(161, 123, 57);
         }       
    
-    
+        
+        footer {
+        text-align: center;
+        padding: 25px 50px;
+        background-color: rgba(0, 0, 0,0.1);
+        backdrop-filter: blur(3px);
+        border-top: 1px solid rgb(255, 255, 255,0.4);
+        color: rgb(255, 255, 255);
+        font-size: 20px;
+        margin-top: 20px;
+        }
+
+        .social-links {
+        list-style: none;
+        padding: 0;
+        margin-top: 15px;
+        display: flex; 
+        flex-direction: column;
+        justify-content: center; 
+        gap: 10px; 
+        }
+
+        .social-links a {
+        text-decoration: none;
+        color: rgb(224, 152, 9);
+        
+        
+        }
+
+        .social-links a:hover {
+        text-decoration: underline;
+        }
     
       
